--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass-loader": "^8.0.0"
   },
   "scripts": {
-    "start": "set BROWSER=none&&react-scripts start",
+    "start-win": "set BROWSER=none&&react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
